@@ -19,7 +19,7 @@ class Gem::Ext::RakeBuilder < Gem::Ext::Builder
     # Deal with possible spaces in the path, e.g. C:/Program Files
     dest_path = '"' + dest_path + '"' if dest_path.include?(' ')
 
-    cmd = ENV['rake'] || 'rake'
+    cmd = ENV['rake'] || Gem.bin_path('rake') rescue Gem.default_exec_format % 'rake'
     cmd += " RUBYARCHDIR=#{dest_path} RUBYLIBDIR=#{dest_path}" # ENV is frozen
 
     run cmd, results
